--- a/package.json
+++ b/package.json
@@ -19,17 +19,23 @@
     "expo": "~49.0.5",
     "expo-font": "~11.4.0",
     "expo-status-bar": "~1.6.0",
+    "phosphor-react-native": "^1.1.2",
     "react": "18.2.0",
     "react-native": "0.72.3",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "styled-components": "^6.0.5"
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.14",
+    "@types/styled-components": "^5.1.26",
+    "@types/styled-components-react-native": "^5.2.1",
     "babel-plugin-module-resolver": "^5.0.0",
     "typescript": "^5.1.3"
+  },
+  "overrides": {
+    "@types/react": "~18.2.14"
   },
   "private": true
 }
