--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "lint": "eslint ."
   },
   "dependencies": {
     "@expo-google-fonts/nunito-sans": "^0.2.3",
@@ -15,10 +16,6 @@
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "date-fns": "^2.30.0",
-    "eslint": "^8.46.0",
-    "eslint-config-prettier": "^8.9.0",
-    "eslint-config-universe": "^11.3.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
     "expo": "~49.0.5",
     "expo-font": "~11.4.0",
     "expo-status-bar": "~1.6.0",
@@ -36,6 +33,8 @@
     "@types/styled-components": "^5.1.26",
     "@types/styled-components-react-native": "^5.2.1",
     "babel-plugin-module-resolver": "^5.0.0",
+    "eslint": "^8.47.0",
+    "eslint-config-universe": "^12.0.0",
     "typescript": "^5.1.3"
   },
   "overrides": {
